--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body {
-    font-family: cursive, sans-serif;
+    font-family: "Lateef", cursive, sans-serif;
+    background-color: pink;
+    font-size: 25px;
+    border-left: 15px;
 }
 
 h1, h2, h3, h5 {
@@ -27,4 +30,13 @@ footer {
 
 .navbar {
     background-color: #ce4165;
+}
+
+.fa {
+    color:#ce4165;
+}
+
+.btn-lg {
+    background-color: #ce4165;
+    color: white;
 }
