--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,14 @@ h2, h3, h5 {
 
 h4 {
     color: white;
+    font-size: 150%;
 }
 
 h1 {
     color: #a03a54;
 }
 
-footer {
+.site-footer {
     background-image: linear-gradient(pink, white);
     padding: 20px 0;
 }
@@ -59,4 +60,8 @@ footer {
 a, a:hover {
   color: inherit;
   text-decoration: none;
+}
+
+.blockquote-footer {
+    background-image: white;
 }
